--- a/Presentacion/Conclusiones/Conclusiones.tex
+++ b/Presentacion/Conclusiones/Conclusiones.tex
@@ -7,24 +7,32 @@
 
 \begin{frame}
   \frametitle{CONCLUSIONES}
-  \vspace{0.2cm}
+  \vspace{0.3cm}
  \begin{itemize} 
-  \item Comportamiento razonable ante el aumento de temperatura. Se puede aproximar con un decaimiento exponencial.
-  \vspace{0.2cm}
+  \item Se aproxima el comportamiento en función de la temperatura con una función de decaimiento exponencial. No se encuentran trabajos en la literatura que realicen estas aproximaciones.
+  \vspace{0.3cm}
+  \item Se observa una marcada asimetría tracción - compresión. Pocos trabajos analizan distintos tipos de carga.
+  \vspace{0.3cm}
   \item Se observan bandas de corte, las cuales son más evidentes con condiciones de frontera libre.
-  \vspace{0.2cm}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{CONCLUSIONES}
+  \vspace{0.6cm}
+ \begin{itemize} 
   \item Analizamos los efectos de la temperatura sobre nanopartículas embebidas, indicando estabilidad debajo de 400 K. A temperaturas más elevadas, se pierde la frontera nítida cristal/amorfo.
+  \vspace{0.6cm}
+  \item Las curvas tensión-deformación de la matriz con inclusión son muy similares al caso sin nanopartícula, pero existe un retardo en la nucleación de poros bajo tracción.
  \end{itemize}
 \end{frame}
 
 \begin{frame}
   \frametitle{CONCLUSIONES}
-  \vspace{0.2cm}
+  \vspace{1cm}
  \begin{itemize}
-  \item Las curvas tensión-deformación de la matriz con inclusión son muy similares al caso sin nanopartícula, pero existe un retardo en la nucleación de poros bajo tracción.
-  \vspace{0.2cm}
   \item Muestra porosa bajo compresión: los poros concentran tensiones pero también retrasan la nucleación de SBs.
-  \vspace{0.2cm}
+  \vspace{1cm}
   \item Muestra porosa bajo tracción: los poros no se cierran y facilitan el movimiento de átomos a su alrededor, impidiendo la formación de STZs y SBs.
  \end{itemize}
 \end{frame}
@@ -44,12 +52,14 @@
 
 \begin{frame}
  \frametitle{Trabajos futuros}
- \vspace{0.5cm}
+ \vspace{0.3cm}
  \begin{itemize}
   \item Generar y estudiar muestras a menores velocidades de enfriamiento y velocidad de deformación.
-  \vspace{0.5cm}
+  \vspace{0.4cm}
   \item Estudiar muestras de mayor tamaño (mayor cantidad de nanopartículas y diferentes topologías de poros).
-  \vspace{0.5cm}
+  \vspace{0.4cm}
   \item Llevar propiedades del estudio nano a códigos de elementos finitos para estudiar piezas de mayor tamaño.
+  \vspace{0.4cm}
+  \item Investigar el origen de la asimetría tracción - compresión.
  \end{itemize}
 \end{frame}
