--- a/Presentacion/Nanoglass/Nanoglass.tex
+++ b/Presentacion/Nanoglass/Nanoglass.tex
@@ -48,25 +48,34 @@
 \begin{frame}
     \frametitle{Preparaci\'on de la muestra porosa}
     \vspace{0cm}
+    Se busca imitar procedimientos experimentales (Zuo \textit{et al.}, 2003)
+    \only<1>{
     \begin{enumerate}
-        \item Ubicaci\'on aleatoria de part\'iculas de 2.5 nm de radio.
-        \item Estabilización a 650K (volumen constante, pocos ps). 
-        \item Hasta 10 ps de compresi\'on (400 bar).
-        \item Repetición pasos 2 y 3 $\rightarrow$ \textbf{Extracción}
+        \item Ubicaci\'on aleatoria de part\'iculas de 2.5 nm de radio.\vspace{0.1cm}
+        \item Estabilización a 650K (volumen constante, pocos ps).\vspace{0.1cm}
+        \item Hasta 10 ps de compresi\'on (400 bar).\vspace{0.1cm}
+        \item Repetición pasos 2 y 3 $\rightarrow$ \textbf{Extracción}\vspace{0.1cm}
         \item M\'as relajaci\'on: temple a temperatura 0, disminución de presi\'on a 0, calentamiento hasta 300K y reducción de presi\'on a 0. Cambios de T: $6.5 \cdot 10^{14} K/s$.
-        \begin{textblock*}{3cm}(2.5cm,6.5cm) % {block width} (coords)
-            \includegraphics[width=3cm]{Cap_5/spheres2.png}
+    \end{enumerate}
+    }
+    \only<2>{
+	\begin{textblock*}{5cm}(1.5cm,3.5cm) % {block width} (coords)
+            \includegraphics[width=5cm]{Cap_5/spheres2.png}
         \end{textblock*}
-        \begin{textblock*}{3cm}(7cm,6.5cm) % {block width} (coords)
-            \includegraphics[width=3cm]{Cap_5/spheres3.png}
+        \begin{textblock*}{5cm}(7cm,3.5cm) % {block width} (coords)
+            \includegraphics[width=5cm]{Cap_5/spheres3.png}
         \end{textblock*}
-        \begin{textblock*}{3cm}(3.8cm,9.1cm)
+        \begin{textblock*}{3cm}(3.8cm,8cm)
          \scriptsize{Previo al sinterizado}
         \end{textblock*}
-        \begin{textblock*}{3cm}(7.9cm,8.8cm)
+        \begin{textblock*}{3cm}(8.1cm,8cm)
          \scriptsize{Posterior al sinterizado}         
         \end{textblock*}
-    \end{enumerate}
+        }
+        
+	\begin{textblock*}{12cm}(1.2cm,8.7cm)
+	  \scriptsize{Zuo, R., Aulbach, E., and Rodel, J., \textit{Acta Mater.}, \textbf{51}, 4563-4574 (2003)}
+	\end{textblock*}
 \end{frame}
 
 %%%
@@ -140,7 +149,8 @@
         Luego del colapso de los poros hay un endurecimiento significativo. %Indicar que todas las curvas son iguales
     \end{textblock*}
     \begin{textblock*}{12cm}(0.6cm,8.5cm) % {block width} (coords)
-        A mayor porosidad $\rightarrow$ menor esfuerzo para cerrar los poros.
+    \centering
+        A mayor porosidad $\rightarrow$ menor esfuerzo para cerrar los poros (''radio efectivo'' mayor)
     \end{textblock*}
 \end{frame}
 
@@ -334,8 +344,8 @@
   \centering
   \scriptsize{Tracción}
  \end{textblock*}
- \begin{textblock*}{12cm}(1cm,8.2cm)
- Aumenta $\sigma$ máxima soportada y módulo de elasticidad.\\
+ \begin{textblock*}{12cm}(0.7cm,8.2cm)
+ Aumento leve $\sigma$ máxima soportada y módulo de elasticidad.\\
  Luego de 7.5\% es dependiente del SVF. 
  \end{textblock*}
  
