--- a/Presentacion/Nanoparticles/Nanoparticles.tex
+++ b/Presentacion/Nanoparticles/Nanoparticles.tex
@@ -242,7 +242,7 @@
   \begin{textblock*}{12.6cm}(-0.08cm,1.5cm) 
     \begin{figure}[htp]
      \centering
-     \includegraphics[height=6cm]{../ResumenImagenes/Figures/NanoParticles/Snapshots/cuSphereTension_10K_Snapshots.png}
+     \includegraphics[height=6cm]{cuSphereTension_10K_Snapshots.png}
     \end{figure}
   \end{textblock*}
   \begin{textblock*}{12cm}(0.5cm,8.5cm) 
@@ -264,7 +264,7 @@
   \begin{textblock*}{12.6cm}(-0.08cm,1.5cm) 
     \begin{figure}[htp]
      \centering
-     \includegraphics[height=6cm]{../ResumenImagenes/Figures/NanoParticles/Snapshots/cuSphereCompression_10K_Snapshots.png}
+     \includegraphics[height=6cm]{cuSphereCompression_10K_Snapshots.png}
     \end{figure}
   \end{textblock*}
   \begin{textblock*}{12cm}(0.5cm,8.5cm) 
@@ -278,7 +278,7 @@
   \begin{textblock*}{12.6cm}(-0.08cm,1.5cm) 
     \begin{figure}[htp]
      \centering
-     \includegraphics[height=6cm]{../ResumenImagenes/Figures/NanoParticles/Snapshots/B2SphereTension_10K_Snapshots.png}
+     \includegraphics[height=6cm]{B2SphereTension_10K_Snapshots.png}
     \end{figure}
   \end{textblock*}
   \begin{textblock*}{12cm}(0.5cm,8.5cm) 
@@ -292,7 +292,7 @@
   \begin{textblock*}{12.6cm}(-0.08cm,1.5cm) 
     \begin{figure}[htp]
      \centering
-     \includegraphics[height=6cm]{../ResumenImagenes/Figures/NanoParticles/Snapshots/B2SphereCompression_10K_Snapshots.png}
+     \includegraphics[height=6cm]{B2SphereCompression_10K_Snapshots.png}
     \end{figure}
   \end{textblock*}
   \begin{textblock*}{12cm}(0.5cm,8.5cm) 
