--- a/Presentacion/Carac/Carac.tex
+++ b/Presentacion/Carac/Carac.tex
@@ -29,7 +29,7 @@
     \vspace{0.1cm}
     \begin{itemize}
         \item Software: LAMMPS (lammps.sandia.gov) para simulaci\'on, Ovito (www.ovito.org) para visualizaci\'on, Gnuplot/Shell/Python para an\'alisis
-        \item Muestra: Cu$_{46}$Zr$_{54}$, descripta por Arman et al., 2010.
+        \item Muestra: Cu$_{46}$Zr$_{54}$, descripta por Arman \textit{et al}., 2010.
         \begin{itemize}
 	  \item 160k \'atomos.
 	  \item Velocidad de enfriamiento de 10$^{12}$K/s 
@@ -161,7 +161,7 @@
   \end{figure}
  \end{textblock*}
  \begin{textblock*}{4.5cm}(8cm,2.5cm)
-      Expresi\'on adaptada de Cheng et al. (2011) :\\
+      Expresi\'on adaptada de Cheng \textit{et al}. (2011) :\\
 	$\sigma_y/G =A+B(T/T_g)^{2/3}$
   \end{textblock*}
   \begin{textblock*}{4.5cm}(8cm,4.5cm)
@@ -282,7 +282,7 @@
   \end{textblock*}
   \begin{textblock*}{9cm}(0cm,7.7cm)
    \centering
-   \small{Son similares a las de nanoalambres de vidrios met\'alicos vistas en Xiao et al. (2012).\\}
+   \small{Son similares a las de nanoalambres de vidrios met\'alicos vistas en Xiao \textit{et al}. (2012).\\}
   \end{textblock*}
   
   \only<1>{
