--- a/Presentacion/Nanoparticles/Nanoparticles.tex
+++ b/Presentacion/Nanoparticles/Nanoparticles.tex
@@ -242,20 +242,27 @@
   \begin{textblock*}{12.6cm}(-0.08cm,1.5cm) 
     \begin{figure}[htp]
      \centering
-     \includegraphics[height=6cm]{cuSphereTension_10K_Snapshots.png}
+     \includegraphics[height=6cm]{../Presentacion/Nanoparticles/cuSphereTension_10K_Snapshots.png}
     \end{figure}
   \end{textblock*}
   \begin{textblock*}{12cm}(0.5cm,8.5cm) 
     \centering
       \small{Inclusi\'on de Cu-FCC bajo tracci\'on a 10K según deformaci\'on atómica. De izquierda a derecha: $\epsilon$ = 16.66 \%, 16.68 \% y 16.70 \%.}
     \end{textblock*}
-    
+
    \only<2>{
     \begin{textblock*}{10cm}(6cm,2cm)
       \begin{figure}[htp]
 	\includegraphics[width=3cm]{Presentacion/nanoparticles_macla.png}
     \end{figure}
     \end{textblock*}
+    \begin{textblock*}{6cm}(8.4cm,5.3cm)
+     \begin{tikzpicture}[overlay]
+      \path[line width=0.8mm,fill=black,solid,<-] (0,0) edge [bend right] (1.4,0.4);
+      \end{tikzpicture}
+    \end{textblock*}
+    
+
    }
 \end{frame}
 
@@ -264,7 +271,7 @@
   \begin{textblock*}{12.6cm}(-0.08cm,1.5cm) 
     \begin{figure}[htp]
      \centering
-     \includegraphics[height=6cm]{cuSphereCompression_10K_Snapshots.png}
+     \includegraphics[height=6cm]{../Presentacion/Nanoparticles/cuSphereCompression_10K_Snapshots.png}
     \end{figure}
   \end{textblock*}
   \begin{textblock*}{12cm}(0.5cm,8.5cm) 
@@ -278,7 +285,7 @@
   \begin{textblock*}{12.6cm}(-0.08cm,1.5cm) 
     \begin{figure}[htp]
      \centering
-     \includegraphics[height=6cm]{B2SphereTension_10K_Snapshots.png}
+     \includegraphics[height=6cm]{../Presentacion/Nanoparticles/B2SphereTension_10K_Snapshots.png}
     \end{figure}
   \end{textblock*}
   \begin{textblock*}{12cm}(0.5cm,8.5cm) 
@@ -292,7 +299,7 @@
   \begin{textblock*}{12.6cm}(-0.08cm,1.5cm) 
     \begin{figure}[htp]
      \centering
-     \includegraphics[height=6cm]{B2SphereCompression_10K_Snapshots.png}
+     \includegraphics[height=6cm]{../Presentacion/Nanoparticles/B2SphereCompression_10K_Snapshots.png}
     \end{figure}
   \end{textblock*}
   \begin{textblock*}{12cm}(0.5cm,8.5cm) 
