--- a/Presentacion/presentacion.tex
+++ b/Presentacion/presentacion.tex
@@ -69,6 +69,14 @@
 % Slide de titulo
 %%%
 \section{}
+\setbeamertemplate{frametitle}
+{
+\vspace{-0.04cm}
+\begin{beamercolorbox}[wd=\paperwidth,leftskip=0.3cm,rightskip=0.3cm,ht=3ex,dp=1.5ex]{frametitle}
+	 \textcolor{hsrmRedDark}{\MakeUppercase{\insertframetitle}}%
+\end{beamercolorbox}
+}
+
 \begin{frame}
 \frametitle{. }
 \vspace{2cm}
